# rusty_money

./: CHANGELOG.md  Cargo.toml  IMPROVEMENTS.md  README.md  build.rs
.fleet/: run.json
data/: currencies.json  locales.json
src/: cur.rs  currency.rs  def.rs  error.rs  exchange.rs  format.rs  lib.rs  locale.rs  money.rs
src/currencies/: crypto.rs  crypto_currencies.rs  iso.rs  iso_currencies.rs  mod.rs
src/currency/: crypto_currencies.rs  iso_currencies.rs
