[package]
name = "rusty-money"
version = "0.4.8"
authors = ["Varun Srinivasan <varunsrin@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/varunsrin/rusty_money"
documentation = "https://docs.rs/rusty-money"
description = """
Parse, format and perform calculations with money safely.
"""
keywords = ["money", "currency", "iso-4217", "crypto", "cryptocurrency"]
categories = ["data-structures", "rust-patterns", "cryptography::cryptocurrencies"]

[features]
default=["iso"]
iso = []
crypto = []

[dependencies]
rust_decimal = { default-features = false, version = "1.36.0" }

[dev-dependencies]
rust_decimal_macros = "1.36.0"
