[package]
name = "rusty-money"
version = "0.5.2" # Bump version for breaking changes & features
authors = ["David Geib <davidjgeib@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/davyjo/rusty_money"
documentation = "https://docs.rs/rusty-money"
description = """
Parse, format and perform calculations with money safely.
"""
keywords = ["money", "currency", "iso-4217", "crypto", "cryptocurrency"]
categories = ["data-structures", "rust-patterns", "cryptography::cryptocurrencies"]
build = "build.rs" # Specify the build script

[dependencies]
rust_decimal = { default-features = false, version = "1.37.1", features = ["serde", "std"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140" # For parsing JSON data files (locales)
once_cell = "1.21.3" # For lazy static initialization (locale map)  # For compile-time maps (currency lookup)

[features]
default = []
# Enables serialization/deserialization as {"amount": "...", "currency": "..."}
serde_struct = []

[dev-dependencies]
rust_decimal_macros = "1.37.1"
serde_json = "1.0.140" # Add serde_json for testing serialization
# phf_macros is included via phf feature "macros"

[build-dependencies]
serde = { version = "1.0.219", features = ["derive"] } # For deserializing data files
serde_json = "1.0.140" # For parsing JSON data files  # For build-time generation (if needed, though maybe not anymore)
